# TensorHue

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  help-wanted.md
.github/workflows/: pylint.yml  pypi-release.yml  python-publish.yml  tests.yml  update-coverage-badge.yml  update-coverage-reports-and-badge.yml
reports/junit/: junit.xml
tensorhue/: __init__.py  _jax.py  _numpy.py  _print_opts.py  _tensor_str.py  _tensorflow.py  _torch.py  colors.py  converters.py  eastereggs.py  torch.py  viz.py  x_print.py
tensorhue.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tensorhue/connectors/: _numpy.py  _pillow.py  _tensorflow.py  _torch.py
tests/: test__jax.py  test__numpy.py  test__print_opts.py  test__torch.py  test_colors.py  test_connector_jax.py  test_connector_numpy.py  test_connector_pillow.py  test_connector_tensorflow.py  test_connector_torch.py  test_converter_jax.py  test_converter_pillow.py  test_converter_tensorflow.py  test_converter_torch.py  test_eastereggs.py  test_viz.py
