[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
extend-exclude = "(\\.md|\\.svg$)"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=tensorhue"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "tensorhue"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
