[metadata]
name = tensorhue,
author = epistoteles,
author_email = <korbinian.koch@uni-hamburg.de>,
description = ,
long_description_content_type = text/markdown,
long_description = ,
install_requires = ,
keywords = ,
classifiers=
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

[options]
package = tensorhue
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pre-commit
    pylint
    torch
    tox
    pytest
    pytest-cov
    mypy
    flake8

[options.package_data]
tensorhue = py.typed
