[metadata]
name = tensorhue
version = attr: tensorhue.__version__
author = epistoteles
author_email = <korbinian.koch@uni-hamburg.de>
description = TensorHue lets you visualize tensors in your console.
long_description_content_type = text/markdown
long_description =
    TensorHue is a Python library that allows you to visualize tensors right in your console, making understanding and debugging tensor contents easier.

    Learn more at: https://github.com/epistoteles/tensorhue
install_requires =
    numpy
    rich
    matplotlib
keywords =
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.9
zip_safe = no

[options.packages.find]
include = tensorhue

[project]
name = "tensorhue"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "tensorhue.__version__"}

[options.extras_require]
testing =
    pre-commit
    pylint
    torch
    tox
    pytest
    pytest-cov
    mypy
    flake8

[options.package_data]
tensorhue = py.typed
